# flash_attention_numba

./: Makefile  README.md  flash_attention.py  requirements.txt  test.py
.github/workflows/: build_and_test.yml
examples/: bert_integration.ipynb
sandbox/: CMakeLists.txt  dyn_smem.py  flash.py  main.cpp  matmul.py  notebook.ipynb  race_condition.py  tmp.py  type_sharedmemory.py
